<resources xmlns:xcliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>

    <string name="name">Name</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="decrement_button">-</string>
    <string name="quantity_viewer">1</string>
    <string name="quantity_selector"><xcliff:g id = "quantity" example ="2" >%d</xcliff:g> </string>
    <string name="increment_button">+</string>
    <string name="order_summary">Order Summary</string>
    <string name="price">$0</string>
    <string name="order_button">Order</string>
    <string name="thank_you">Thank You!</string>
    <string name="toppings">Toppings</string>

</resources>